# prob_engine

./: README.md  pyproject.toml
src/prob_engine/: __init__.py  __main__.py  distribution.py  ecdf.py  mixture.py  multi_normal.py  neaural_net.py  neural_dist.py  uniform_ball.py  uniform_grid.py  uniform_rectangle.py  uniform_shell.py
